# pico

./: CMakeLists.txt  README.md
rnt/: detect-cuda.cu  detect-cuda.h  picornt.cpp  picornt.h
rnt/cascades/: face-cpu.h  face-cuda.h
rnt/sample/: facefinder.h
